<?xml version="1.0"?>
<package format="2">
  <name>jetbot_description</name>
  <version>0.0.1</version>
  <description>3D models of the Jetbot for simulation and visualization</description>
  
  <license>Apache 2.0</license>
  <maintainer email="richard.osterloh@gmail.com">Richard Osterloh</maintainer>
  
  <author email="richard.osterloh@gmail.com">Richard Osterloh</author>
  <url type="repository">https://github.com/rosterloh/jetbot</url>
  <url type="bugtracker">https://github.com/rosterloh/jetbot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
