<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_msgs</name>
  <version>1.0.0</version>
  <description>
    Message and service types: custom messages and services for Jetbot packages for ROS2
  </description>
  <license>Apache 2.0</license>
  <author email="richard.osterloh@gmail.com">Richard Osterloh</author>
  <maintainer email="richard.osterloh@gmail.com">Richard Osterloh</maintainer>
  <url type="repository">https://github.com/rosterloh/jetbot_ros2</url>
  <url type="bugtracker">https://github.com/rosterloh/jetbot_ros2/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>