<?xml version="1.0"?>
<package format="2">
  <name>jetbot</name>
  <version>0.0.1</version>
  <description>ROS2 odometry and tf node for Jetbot</description>
  
  <license>Apache 2.0</license>
  <maintainer email="richard.osterloh@gmail.com">Richard Osterloh</maintainer>
  
  <author email="richard.osterloh@gmail.com">Richard Osterloh</author>
  <url type="repository">https://github.com/rosterloh/jetbot</url>
  <url type="bugtracker">https://github.com/rosterloh/jetbot/issues</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>