<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_node</name>
  <version>1.0.0</version>
  <description>
    Jetbot driver node that includes odometry and tf
  </description>
  <license>Apache 2.0</license>
  <author email="richard.osterloh@gmail.com">Richard Osterloh</author>
  <maintainer email="richard.osterloh@gmail.com">Richard Osterloh</maintainer>
  <url type="repository">https://github.com/rosterloh/jetbot_ros2</url>
  <url type="bugtracker">https://github.com/rosterloh/jetbot_ros2/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>jetbot_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>